# cadcad-predator-prey-model

./: pyproject.toml
prey-predator/: lab_notebook.ipynb  run.py
prey-predator/prey_predator_abm/: config.py
prey-predator/prey_predator_sd/: config.py
