[tool.poetry]
name = "demos"
version = "0.1.0"
description = ""
authors = ["Benjamin Scholtz <ben@bitsofether.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cadCAD = "^0.4.18"
matplotlib = "^3.3.0"
ipykernel = "^5.3.4"
jupyter = "^1.0.0"
notebook = "^6.1.3"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
